Ajout du filtre purify pour le HTML

--- a/app/Resources/views/blog-layout.html.twig
+++ b/app/Resources/views/blog-layout.html.twig
@@ -30,3 +30,8 @@
         </div>
     {% endif %}
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="//cdn.ckeditor.com/4.7.1/full/ckeditor.js"></script>
+{% endblock %}
